--- a/gb/20/9/10/n12393511.md
+++ b/gb/20/9/10/n12393511.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gxwbbu3855/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gxwbbu3855/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gxwbbu3855/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gxwbbu3855/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gxwbbu3855/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>面对艰难形势 各政党启动竞选</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年09月10日讯】（大纪元记者宁柏综合报导）“中共病毒”疫情的爆发，令<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>各<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E6%94%BF%E5%85%9A.md#1">政党</a>被迫推迟今年大选的<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E7%AB%9E%E9%80%89.md#1">竞选</a>活动，在距离大选还剩一个月的情况下，竞相提出各项当选承诺。似乎并未考虑“中共病毒”早已使政府花费了数十亿纽元的情况。钱在哪里？如何实施他们的美好愿景？</p>
-<p>另一方面，各<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E6%94%BF%E5%85%9A.md#1">政党</a>在提出各种承诺的同时，还相互批评、指责对方的政策。</p>
-<p>工党指责国家党准备大幅度削减公共服务，以实现国家党的<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E5%80%BA%E5%8A%A1.md#1">债务</a>控制目标。国家党曾于2017年提出了117亿纽元的财政漏洞指控，而工党试图将自己扮成可信赖的经济管理人。</p>
+<p>【大纪元2020年09月10日讯】（大纪元记者宁柏综合报导）“中共病毒”疫情的爆发，令<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>各<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BF%E5%85%9A.md#1">政党</a>被迫推迟今年大选的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%AB%9E%E9%80%89.md#1">竞选</a>活动，在距离大选还剩一个月的情况下，竞相提出各项当选承诺。似乎并未考虑“中共病毒”早已使政府花费了数十亿纽元的情况。钱在哪里？如何实施他们的美好愿景？</p>
+<p>另一方面，各<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BF%E5%85%9A.md#1">政党</a>在提出各种承诺的同时，还相互批评、指责对方的政策。</p>
+<p>工党指责国家党准备大幅度削减公共服务，以实现国家党的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%80%BA%E5%8A%A1.md#1">债务</a>控制目标。国家党曾于2017年提出了117亿纽元的财政漏洞指控，而工党试图将自己扮成可信赖的经济管理人。</p>
 <p>财政部长Grant Robertson 对于国家党的政策承诺反唇相讥。他指出：“像国家党这样的主要政党，有责任说出其宣布的政策成本是多少。而且我认为这是自‘中共病毒’开始以来拥有三名领导人的政党的混乱状态，对此政策尚不确定立足之本，并推出只会加剧不确定性的因素。”</p>
-<p>对此，国家党领导人 Judith Collins 指出，她的政党将在下周为大选前的经济和财政更新? (PREFU) 出版后，制定一项费用完全计入的“一揽子计划”。她说，不仅应该对国民支出项目进行审查，而且，“不负责任的”政府支出“给小企业增加了很多额外的<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E5%80%BA%E5%8A%A1.md#1">债务</a>和成本。”如何纠正这样的错误决策？</p>
+<p>对此，国家党领导人 Judith Collins 指出，她的政党将在下周为大选前的经济和财政更新? (PREFU) 出版后，制定一项费用完全计入的“一揽子计划”。她说，不仅应该对国民支出项目进行审查，而且，“不负责任的”政府支出“给小企业增加了很多额外的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%80%BA%E5%8A%A1.md#1">债务</a>和成本。”如何纠正这样的错误决策？</p>
 <p>Collins说：“我认为真正重要的是要理解，我们不能简单地借用摆脱衰退的道路，我们需要做的是摆脱衰退。”如果加上绿党，这是一个更加令人担忧的主张。其前景“坦率地说应该将人们在本质上吓倒了。”</p>
 <p>绿党共同领导人James Shaw回应说，如果他们无法为选民提供合适的采样容器，当他们说自己是最好的财政经理时，国家党就是在贬低他们的品牌。自从Shaw为支持绿色私立学校批准了1200万纽元的拨款，他不得不一而再、再而三地向公众公开道歉。</p>
-<p><ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>优先党领导人Winston Peters却表示，他的政党打算在经济与财政更新后宣布其全部支出计划和宣言。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>优先党领导人Winston Peters却表示，他的政党打算在经济与财政更新后宣布其全部支出计划和宣言。</p>
 <p>“您首先要了解的是最新的更新信息，我知道其他人已经掌握了所有成本，现在不知道他们是怎么做到的。但是我们要等到PREFU出来之后，我们会知道我们正在处理什么。”</p>
 <h2>国家的债务危机</h2>
 <p>债务是另一个主要的经济黑云，它对新西兰经济是怎样的影响呢？ Covid-19之前的净债务占GDP 的20%；而目前的债务规模达到了6035亿纽元，约占GDP的40%；根据预测，债务到2023年达到峰值，GDP占比达到53.6%；然后这一数字将有所回落，进入2030s后将会维持在40% 的水平。</p>
@@ -23,8 +23,8 @@
 <p>国家党表示它将比工党 更快地减少债务，10年内可将债务与GDP之比降至30%。据信，这将意味着需要大幅度削减预算支出800亿纽元。</p>
 <p>ACT 领导人David Seymour 也很关心债务问题，他称当前的形势很严峻、令人担忧。</p>
 <p>他说：“我认为现在的利率很低，但可能不会在未来几年，很可能会使我们陷入一种错误的安全感。”<br />
-政府公布<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E7%A8%8E%E6%94%B6.md#1">税收</a>政策</p>
-<p>9月9日是工党的“<ahref="https://github.com/gxwbbu3855/djy/blob/master/gb/tag/%E7%A8%8E%E6%94%B6.md#1">税收</a>日”(T-Day)，所有的目光都盯着政府将宣布怎样的税收政策。新西兰人最终了解到了这一新的税收政策。看来这一次政府没有对所有人加税。税收改革的重点为高收入人士。39% 的最高税率会应用于收入超过18万纽元的人士。 此税率仅影响2% 的新西兰人。</p>
+政府公布<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A8%8E%E6%94%B6.md#1">税收</a>政策</p>
+<p>9月9日是工党的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A8%8E%E6%94%B6.md#1">税收</a>日”(T-Day)，所有的目光都盯着政府将宣布怎样的税收政策。新西兰人最终了解到了这一新的税收政策。看来这一次政府没有对所有人加税。税收改革的重点为高收入人士。39% 的最高税率会应用于收入超过18万纽元的人士。 此税率仅影响2% 的新西兰人。</p>
 <p>有意思的是，工党的个人所得税政策由财政部长Grant Robertson 和税务部长Stuart Nash 共同宣布，总理Jacinda Ardern 并没有露面，去了Whakatane。</p>
 <p>财政部长Grant Robertson 在宣布工党的税收政策时强调，工党承诺在10月份赢得连任后不会提高燃油税。他说：“我们的500万团队在与Covid-19的斗争中做得非常出色。在我们恢复和重建时，保护人们的收入和服务非常重要。”</p>
 <p>工党税收发言人Stuart Nash 表示，公司税率维持不变。他说，这将给企业带来 “连续性和确定性。”</p>
@@ -51,48 +51,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/1/n12074403.md#1">【名家专栏】瘟疫大流行下 居危思危</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/5/n12085795.md#1">前财长：广泛的工资补贴与减税是浪费</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/7/n12089212.md#1">国家党建议GST现金退款助企业渡过难关</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/10/n12097732.md#1">议员敦促商店尽快营业 失业人数恐再增几千</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/11/n12100335.md#1">长期无法营业会使企业陷入困境</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/12/n12100695.md#1">【新西兰疫情5.12】0新增 护士节感谢所有护士付出</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/24/n12132303.md#1">奥市为纳税困难的民众准备了6500万元补助</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/5/28/n12144737.md#1">什么导致本地木材加工企业买不起原料？</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/6/2/n12156489.md#1">《森林修正案》木材加工企业支持 林业主反对？</a></li>
-<li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/20/9/9/n12391689.md#1">首选疫苗因严重不良反应暂停接种试验</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/1/n12074403.md#1">【名家专栏】瘟疫大流行下 居危思危</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/5/n12085795.md#1">前财长：广泛的工资补贴与减税是浪费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/7/n12089212.md#1">国家党建议GST现金退款助企业渡过难关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/10/n12097732.md#1">议员敦促商店尽快营业 失业人数恐再增几千</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/11/n12100335.md#1">长期无法营业会使企业陷入困境</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/12/n12100695.md#1">【新西兰疫情5.12】0新增 护士节感谢所有护士付出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/24/n12132303.md#1">奥市为纳税困难的民众准备了6500万元补助</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144737.md#1">什么导致本地木材加工企业买不起原料？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/2/n12156489.md#1">《森林修正案》木材加工企业支持 林业主反对？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691489.md#1">2月份新住房资源许可批获量创新高</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992445.md#1" target="_blank">（储安平之子）储望华：沉重的回忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/9/n12391994.md#1">【有冇搞错】灾难变功绩 中共体制之恶大曝光</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389716.md#1">【时事纵横】美中记者签证拉锯战 中共谈对等？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/9/n12390995.md#1">【一线采访视频版】前军报记者：港警如魔鬼在人间</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387142.md#1">像科幻大片 美军大炮准确击落巡航导弹</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387030.md#1">川普为何考虑制裁中芯？一份报告震动华府</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387319.md#1">中印冲突升级 印军鸣枪警告 45年来首次</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12383561.md#1">【美食天堂】蒜头可以冷冻？4方法长久保存新鲜大蒜</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388298.md#1">美军“末日飞机”不怕核爆 它有何特点？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388589.md#1">印度农民以半英亩土地种农作物养野鸟</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12386108.md#1">公寓失火俄女在3楼急扔2儿 邻居拿毯子接</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gxwbbu3855/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gxwbbu3855/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/10/n12393511.htm">面对艰难形势 各政党启动竞选</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/10/n12393511.htm">面对艰难形势 各政党启动竞选</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/gxwbbu3855/djy/blob/master/gb/20/9/10/n12393511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gxwbbu3855/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gxwbbu3855/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gxwbbu3855/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gxwbbu3855/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/10/n12393511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
